tests/testcrate/tests/ui/parse.stderr
error: cannot parse expression in sql!(): expected `,`
  --> $DIR/parse.rs:49:5
   |
49 |     sql!(Table.filter(field1 in "value1"));
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

